feat: opção de sair voluntariamente de um grupo e gerar um novo código de convite; recalculo de estados e votos caso um usuário saia do grupo
